[package]
name = "exobody-performance-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4.0"
duration-human = "0.1.10"
itertools = "0.10.5"
rand = "0.8.5"
tinyvec = "1.6.0"
wide = "0.7.5"

[[bench]]
#name = "tinyvec_vs_std"
name = "mpsc_vs_others"
harness = false



[dev-dependencies]
