[package]
name = "exobody-performance-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-fn-stream = "0.2.0"
async-stream = "0.3.3"
criterion = "0.4.0"
duration-human = "0.1.10"
flume = "0.10.14"
futures = { version = "0.3.25", features = ["futures-executor"] }
itertools = "0.10.5"
rand = "0.8.5"
tachyonix = "0.2.0"
tinyvec = "1.6.0"
tokio = { version = "1.24.2", features = ["full"] }
wide = "0.7.5"

[[bench]]
#name = "tinyvec_vs_std"
#name = "mpsc_vs_others"
name = "mpsc_vs_async_stream"
harness = false



[dev-dependencies]
